<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login_in">login in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello!</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="username">USERNAME</string>
    <string name="e_mail">E-MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="repeat_the_password">REPEAT THE PASSWORD</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="sign_up1">SIGN_UP</string>
    <string name="change_the_password">Change the password</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="to_login">to login</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="personal_information">personal information</string>
    <string name="phone_number1">phone number</string>
    <string name="user">USER</string>
    <string name="email">email</string>
    <string name="username1">username</string>
    <string name="about_me">about me</string>
    <string name="chang_the_password">chang the password</string>
    <string name="change_the_password1">change the password</string>
    <string name="contact_1">Contact 1</string>
    <string name="hello1">Hello!</string>
    <string name="i_remember_the_password">I remember the password</string>
    <string name="i_don_t_remember_password">I don\'t remember password</string>
    <string name="e_mail_or_phone_number">E-MAIL OR PHONE NUMBER</string>
</resources>