<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings"
    android:background="@color/color_1">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="68dp"
        android:layout_height="72dp"
        android:layout_marginTop="13dp"
        android:layout_marginStart="12dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/user_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="29dp"
        android:text="@string/user"
        android:textSize="36sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/avatar">

    </TextView>
    <ImageView
        android:id="@+id/backtomain"
        android:layout_width="60sp"
        android:layout_height="45sp"
        android:layout_marginStart="302dp"
        android:layout_marginTop="8dp"
        android:contentDescription="TODO"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/arrowright">
        <!--android:="@color/white">-->

    </ImageView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="10dp"
        android:background="@color/color_2"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="736dp"
            >

            <TextView
                android:id="@+id/personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginStart="6dp"
                android:text="@string/personal_information"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="11dp"
                android:text="@string/phone_number1"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/personal"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="11dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/num">

            </TextView>
            <TextView
                android:id="@+id/useracc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="11dp"
                android:text="@string/username1"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/email">

            </TextView>
            <TextView
                android:id="@+id/aboutme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="11dp"
                android:text="@string/about_me"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/useracc">

            </TextView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cnhgpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_the_password1"
                android:textColor="@color/red"
                android:layout_marginTop="30dp"
                android:layout_marginStart="6dp"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/aboutme">

            </androidx.appcompat.widget.AppCompatButton>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="log out"
                android:textColor="@color/red"
                android:layout_marginTop="30dp"
                android:layout_marginStart="6dp"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cnhgpass"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>