<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.passwordcchangevar"
    android:background="@color/color_1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/chngpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/change_the_password"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/rememberpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="-100dp"
                android:layout_marginEnd="48dp"
                android:enabled="false"
                android:text="@string/i_remember_the_password"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/chngpass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/idontrememberpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginBottom="-100dp"
                android:layout_marginEnd="48dp"
                android:enabled="false"
                android:text="@string/i_don_t_remember_password"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/rememberpass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

