<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.change_pass"
    android:background="@color/color_1">

    <TextView
        android:id="@+id/chngpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/change_the_password"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chngpass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">
    <TextView
        android:id="@+id/oldpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginEnd="290sp"
        android:layout_marginTop="60sp"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/boxoldpass"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/oldpass"
        app:layout_constraintTop_toBottomOf="@+id/oldpass">
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/newpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/boxoldpass"
        app:layout_constraintStart_toStartOf="@id/boxoldpass"
        app:layout_constraintTop_toBottomOf="@id/boxoldpass"
        android:layout_marginTop="60sp"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/boxnewpass"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/newpass"
        app:layout_constraintTop_toBottomOf="@+id/newpass">
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/repeat_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REPEAT THE NEW PASSWORD"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/boxnewpass"
        app:layout_constraintStart_toStartOf="@id/boxnewpass"
        app:layout_constraintTop_toBottomOf="@id/boxnewpass"
        android:layout_marginTop="60sp"/>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/boxrepeatpass"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/repeat_pass"
        app:layout_constraintTop_toBottomOf="@+id/repeat_pass">
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/to_login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_pass"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
